infra/k8s-prod/ingress-serv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: www.geticket.xyz
      http:
        paths:
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              serviceName: payments-serv
              servicePort: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              serviceName: auth-serv
              servicePort: 3000
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              serviceName: tickets-serv
              servicePort: 3000
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              serviceName: orders-serv
              servicePort: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              serviceName: client-serv
              servicePort: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.geticket.xyz'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
